Popis ku znacke na mape
+ popis ku znacke pridavaniej na mape
+ nova DB metoda pre vyber timov, ktore maju definovane treningy

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -175,7 +175,16 @@ p {
 
 
 
-
+.popisZnacky {
+   color: red;
+   background-color: white;
+   font-family: "Lucida Grande", "Arial", sans-serif;
+   font-size: 11px;
+   font-weight: bold;
+   text-align: center;
+   width: 60px;     
+   border: 1px solid red;
+ }
 
 
 
