Opravy a doplnenie vypisov z DB
+ precisteny login, registe
+ opraveny select hracov
+ upraveny layout profilu
+ moznost nastavenia fotografie (URL)
+ zobrazenie fotografie v profile /inac default obrazok/

--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -105,8 +105,10 @@ p {
 }
 
 #profileAvatar {
+	margin-left: 5pt;
 	width: 150pt;
-	display: inline-block;
+	float: left;
+	border: 2px solid black;
 }
 
 #profileAvatarImg {
